--- a/python/katas/_modules/coderbyte/next_palindrome.html
+++ b/python/katas/_modules/coderbyte/next_palindrome.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.next_palindrome.next_palindrome">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">next_palindrome</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the next palindrome greater than :attr:`number`. For example, given 100,</span>
-<span class="sd">    the next palindrome is 101.</span>
+<span class="sd">    This function returns the next palindrome greater than :attr:`number`. For</span>
+<span class="sd">    example, given 100, the next palindrome is 101.</span>
 
 <span class="sd">    :param number: The input integer</span>
 <span class="sd">    :return: The next palindrome greater than :attr:`number`</span>
