--- a/python/katas/_modules/coderbyte/nonrepeating_character.html
+++ b/python/katas/_modules/coderbyte/nonrepeating_character.html
@@ -259,8 +259,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.nonrepeating_character.nonrepeating_character">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">nonrepeating_character</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the first non-repeating character in :attr:`string`. :attr:`string` will</span>
-<span class="sd">    always contain at least one character.</span>
+<span class="sd">    This function returns the first non-repeating character in :attr:`string`.</span>
+<span class="sd">    :attr:`string` will always contain at least one character.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The first non-repeating character in :attr:`string`</span>
