--- a/python/katas/_modules/coderbyte/number_stream.html
+++ b/python/katas/_modules/coderbyte/number_stream.html
@@ -257,11 +257,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.number_stream.number_stream">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">number_stream</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns &quot;true&quot; if there is a consecutive stream of digits of at least N length</span>
-<span class="sd">    where N is the actual digit value in :attr:`string`, or &quot;false&quot; otherwise.</span>
+<span class="sd">    This function returns &quot;true&quot; if there is a consecutive stream of digits of</span>
+<span class="sd">    at least N length where N is the actual digit value in :attr:`string`, or</span>
+<span class="sd">    &quot;false&quot; otherwise.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: &quot;true&quot; if there is a consecutive stream of digits, &quot;false&quot; otherwise</span>
+<span class="sd">    :return: &quot;true&quot; if there is a consecutive stream of digits, &quot;false&quot;</span>
+<span class="sd">        otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">numbers</span> <span class="o">=</span> <span class="p">[</span><span class="n">string</span><span class="p">[</span><span class="mi">0</span><span class="p">]]</span>
     <span class="n">idx</span> <span class="o">=</span> <span class="mi">1</span>
