--- a/python/katas/_modules/coderbyte/permutation_step.html
+++ b/python/katas/_modules/coderbyte/permutation_step.html
@@ -259,11 +259,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.permutation_step.permutation_step">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">permutation_step</span><span class="p">(</span><span class="n">integer</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the next number greater than :attr:`integer` using all the digits in</span>
-<span class="sd">    :attr:`integer`. For example, given 123, the next number greater than it is 132.</span>
+<span class="sd">    This function returns the next number greater than :attr:`integer` using</span>
+<span class="sd">    all the digits in :attr:`integer`. For example, given 123, the next number</span>
+<span class="sd">    greater than it is 132.</span>
 
 <span class="sd">    :param integer: The input integer</span>
-<span class="sd">    :return: The next number greater than :attr:`integer` using all the digits in :attr:`integer`</span>
+<span class="sd">    :return: The next number greater than :attr:`integer` using all the digits</span>
+<span class="sd">        in :attr:`integer`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span>
         <span class="nb">list</span><span class="p">(</span>
