--- a/python/katas/_modules/coderbyte/power_set_count.html
+++ b/python/katas/_modules/coderbyte/power_set_count.html
@@ -259,8 +259,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.power_set_count.power_set_count">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">power_set_count</span><span class="p">(</span><span class="n">int_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the length of the power set of the given list of integers. A power set is</span>
-<span class="sd">    the set of all subsets of a set.</span>
+<span class="sd">    This function returns the length of the power set of the given list of</span>
+<span class="sd">    integers. A power set is the set of all subsets of a set.</span>
 
 <span class="sd">    :param int_arr: The input list of integers</span>
 <span class="sd">    :return: The power set of :attr:`int_arr`</span>
