--- a/python/katas/_modules/coderbyte/reverse_polish_notation.html
+++ b/python/katas/_modules/coderbyte/reverse_polish_notation.html
@@ -259,10 +259,11 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.reverse_polish_notation.reverse_polish_notation">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">reverse_polish_notation</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function computes the equation in :attr:`string`, which is written in reverse Polish</span>
-<span class="sd">    notation.</span>
+<span class="sd">    This function computes the equation in :attr:`string`, which is written in</span>
+<span class="sd">    reverse Polish notation.</span>
 
-<span class="sd">    :param string: The input string, an equation written in reverse Polish notation</span>
+<span class="sd">    :param string: The input string, an equation written in reverse Polish</span>
+<span class="sd">        notation</span>
 <span class="sd">    :return: The result of the equation</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="p">[]</span>
