--- a/python/katas/_modules/coderbyte/run_length.html
+++ b/python/katas/_modules/coderbyte/run_length.html
@@ -259,9 +259,10 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.run_length.run_length">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">run_length</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function compresses :attr:`string` using the run-length encoding algorithm and returns the</span>
-<span class="sd">    result. For example, given the input string &quot;wwwggopp&quot;, the result will be &quot;3w2g1o2p&quot;. It is</span>
-<span class="sd">    assumed that :attr:`string` will not contain any numbers, punctuation, or symbols.</span>
+<span class="sd">    This function compresses :attr:`string` using the run-length encoding</span>
+<span class="sd">    algorithm and returns the result. For example, given the input string</span>
+<span class="sd">    &quot;wwwggopp&quot;, the result will be &quot;3w2g1o2p&quot;. It is assumed that</span>
+<span class="sd">    :attr:`string` will not contain any numbers, punctuation, or symbols.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: A run-length-encoded version of :attr:`string`</span>
