--- a/python/katas/_modules/coderbyte/second_greatlow.html
+++ b/python/katas/_modules/coderbyte/second_greatlow.html
@@ -257,10 +257,11 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.second_greatlow.second_greatlow">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">second_greatlow</span><span class="p">(</span><span class="n">int_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the second lowest and second greatest numbers in :attr:`int_arr`,</span>
-<span class="sd">    respectively. If the length of :attr:`int_arr` is 1, then the second lowest and second greatest</span>
-<span class="sd">    numbers are the same number. If the length is 2, the highest number is the second lowest, and</span>
-<span class="sd">    the lowest number is the second highest.</span>
+<span class="sd">    This function returns the second lowest and second greatest numbers in</span>
+<span class="sd">    :attr:`int_arr`, respectively. If the length of :attr:`int_arr` is 1, then</span>
+<span class="sd">    the second lowest and second greatest numbers are the same number. If the</span>
+<span class="sd">    length is 2, the highest number is the second lowest, and the lowest number</span>
+<span class="sd">    is the second highest.</span>
 
 <span class="sd">    :param int_arr: The input list of integers</span>
 <span class="sd">    :return: The second lowest and second highest numbers</span>
