--- a/python/katas/_modules/coderbyte/square_figures.html
+++ b/python/katas/_modules/coderbyte/square_figures.html
@@ -259,11 +259,12 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.square_figures.square_figures">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">square_figures</span><span class="p">(</span><span class="n">num</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the smallest integer that, when squared, has a length equal to</span>
-<span class="sd">    :attr:`num`.</span>
+<span class="sd">    This function returns the smallest integer that, when squared, has a length</span>
+<span class="sd">    equal to :attr:`num`.</span>
 
 <span class="sd">    :param num: The input integer</span>
-<span class="sd">    :return: The smallest integer squared that has a length equal to :attr:`num`</span>
+<span class="sd">    :return: The smallest integer squared that has a length equal to</span>
+<span class="sd">        :attr:`num`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">result</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">sqrt</span><span class="p">(</span><span class="mi">10</span> <span class="o">**</span> <span class="p">(</span><span class="n">num</span> <span class="o">-</span> <span class="mi">1</span><span class="p">)))</span> <span class="o">-</span> <span class="mi">1</span>
     <span class="k">while</span> <span class="kc">True</span><span class="p">:</span>
