--- a/python/katas/_modules/coderbyte/two_sum.html
+++ b/python/katas/_modules/coderbyte/two_sum.html
@@ -259,12 +259,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.two_sum.two_sum">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">two_sum</span><span class="p">(</span><span class="n">integers</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns pairs of integers that sum to the first element in :attr:`integers`. If no</span>
-<span class="sd">    two numbers sum to the first element in the list, &quot;-1&quot; is returned.</span>
+<span class="sd">    This function returns pairs of integers that sum to the first element in</span>
+<span class="sd">    :attr:`integers`. If no two numbers sum to the first element in the list,</span>
+<span class="sd">    &quot;-1&quot; is returned.</span>
 
 <span class="sd">    :param integers: The input list of integers</span>
-<span class="sd">    :return: A string that contains pairs of integers that sum to the first element in</span>
-<span class="sd">        :attr:`integers`, or &quot;-1&quot; if there are none</span>
+<span class="sd">    :return: A string that contains pairs of integers that sum to the first</span>
+<span class="sd">        element in :attr:`integers`, or &quot;-1&quot; if there are none</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">values</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="n">results</span> <span class="o">=</span> <span class="p">[]</span>
