--- a/python/katas/_modules/codewars/product_consecutive_fib_numbers.html
+++ b/python/katas/_modules/codewars/product_consecutive_fib_numbers.html
@@ -257,12 +257,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.product_consecutive_fib_numbers.product_fib">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">product_fib</span><span class="p">(</span><span class="n">prod</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the two Fibonacci numbers F(n) and F(n-1) whose product is equal to</span>
-<span class="sd">    :attr:`prod`. If no product is found, this function returns the two Fibonacci numbers whose</span>
-<span class="sd">    product is greater than :attr:`prod`.</span>
+<span class="sd">    This function returns the two Fibonacci numbers F(n) and F(n-1) whose</span>
+<span class="sd">    product is equal to :attr:`prod`. If no product is found, this function</span>
+<span class="sd">    returns the two Fibonacci numbers whose product is greater than :attr:`prod`.</span>
 
-<span class="sd">    :param prod: The input integer representing the product of two Fibonacci numbers</span>
-<span class="sd">    :return: Two Fibonacci numbers and either True if the product is found, False otherwise</span>
+<span class="sd">    :param prod: The input integer representing the product of two Fibonacci</span>
+<span class="sd">        numbers</span>
+<span class="sd">    :return: Two Fibonacci numbers and either True if the product is found,</span>
+<span class="sd">        False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">is_found</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">fibonacci</span> <span class="o">=</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="mi">1</span><span class="p">]</span>
