--- a/python/katas/_modules/codewars/product_of_the_main_diagonal_of_a_square_matrix.html
+++ b/python/katas/_modules/codewars/product_of_the_main_diagonal_of_a_square_matrix.html
@@ -260,8 +260,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.product_of_the_main_diagonal_of_a_square_matrix.main_diagonal_product">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">main_diagonal_product</span><span class="p">(</span><span class="n">matrix</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the product of all the integers in the main diagonal (upper left to</span>
-<span class="sd">    bottom right).</span>
+<span class="sd">    This function calculates the product of all the integers in the main</span>
+<span class="sd">    diagonal (upper left to bottom right).</span>
 
 <span class="sd">    :param matrix: A two-dimensional list of integers</span>
 <span class="sd">    :return: The product of all the integers in the main diagonal</span>
