--- a/python/katas/_modules/codewars/pyramid_array.html
+++ b/python/katas/_modules/codewars/pyramid_array.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.pyramid_array.pyramid">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">pyramid</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function generates a list of length :attr:`number` that contains zero or more sublists. The</span>
-<span class="sd">    first sublist will contain one element, the second will contain two, the third will contain</span>
-<span class="sd">    three, etc. The last sublist will contain :attr:`number` elements.</span>
+<span class="sd">    This function generates a list of length :attr:`number` that contains zero</span>
+<span class="sd">    or more sublists. The first sublist will contain one element, the second</span>
+<span class="sd">    will contain two, the third will contain three, etc. The last sublist will</span>
+<span class="sd">    contain :attr:`number` elements.</span>
 
 <span class="sd">    :param number: The input integer, the length of the list</span>
 <span class="sd">    :return: A list containing sublists</span>
