--- a/python/katas/_modules/codewars/remove_consecutive_duplicate_words.html
+++ b/python/katas/_modules/codewars/remove_consecutive_duplicate_words.html
@@ -259,8 +259,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.remove_consecutive_duplicate_words.remove_consecutive_duplicates">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">remove_consecutive_duplicates</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function keeps the first instance of a word if it appears more than once consecutively. For</span>
-<span class="sd">    example, given the string &quot;hello hello hello world hi hi hi hi bye bye hi hi hello&quot;, the string</span>
+<span class="sd">    This function keeps the first instance of a word if it appears more than</span>
+<span class="sd">    once consecutively. For example, given the string</span>
+<span class="sd">    &quot;hello hello hello world hi hi hi hi bye bye hi hi hello&quot;, the string</span>
 <span class="sd">    &quot;hello world hi bye hi hello&quot; is returned.</span>
 
 <span class="sd">    :param string: The input string</span>
