--- a/python/katas/_modules/codewars/remove_duplicates_from_list.html
+++ b/python/katas/_modules/codewars/remove_duplicates_from_list.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.remove_duplicates_from_list.distinct">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">distinct</span><span class="p">(</span><span class="n">seq</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function removes all duplicate values from the given list. The order of the elements in the</span>
-<span class="sd">    list that is returned must be the same as the order of the elements in the input list.</span>
+<span class="sd">    This function removes all duplicate values from the given list. The order</span>
+<span class="sd">    of the elements in the list that is returned must be the same as the order</span>
+<span class="sd">    of the elements in the input list.</span>
 
 <span class="sd">    :param seq: The input list</span>
 <span class="sd">    :return: A list of unique elements</span>
