--- a/python/katas/_modules/codewars/remove_first_and_last_character.html
+++ b/python/katas/_modules/codewars/remove_first_and_last_character.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.remove_first_and_last_character.remove_char">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">remove_char</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function removes the first and last characters from the given string. It is assumed that</span>
-<span class="sd">    the string contains at least two characters.</span>
+<span class="sd">    This function removes the first and last characters from the given string.</span>
+<span class="sd">    It is assumed that the string contains at least two characters.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: The same string but with the first and last characters removed from it</span>
+<span class="sd">    :return: The same string but with the first and last characters removed</span>
+<span class="sd">        from it</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">string</span><span class="p">[</span><span class="mi">1</span><span class="p">:</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span></div>
 
