--- a/python/katas/_modules/codewars/remove_unnecessary_characters_from_items_in_list.html
+++ b/python/katas/_modules/codewars/remove_unnecessary_characters_from_items_in_list.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.remove_unnecessary_characters_from_items_in_list.remove_char">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">remove_char</span><span class="p">(</span><span class="n">array</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function removes all non-numeric characters in each string in :attr:`array`. Then each</span>
-<span class="sd">    number in the list is formatted as US currency. For example, &quot;Ax?7.|.5yZ&quot; becomes &quot;$0.75&quot;.</span>
+<span class="sd">    This function removes all non-numeric characters in each string in</span>
+<span class="sd">    :attr:`array`. Then each number in the list is formatted as US currency.</span>
+<span class="sd">    For example, &quot;Ax?7.|.5yZ&quot; becomes &quot;$0.75&quot;.</span>
 
 <span class="sd">    :param array: The input list of strings</span>
 <span class="sd">    :return: A list of strings, each string formatted as US currency</span>
