--- a/python/katas/_modules/codewars/reverse_list_order.html
+++ b/python/katas/_modules/codewars/reverse_list_order.html
@@ -257,10 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.reverse_list_order.reverse_list">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">reverse_list</span><span class="p">(</span><span class="n">lst</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a new list that consists of the elements in :attr:`lst` in reversed order.</span>
+<span class="sd">    This function returns a new list that consists of the elements in</span>
+<span class="sd">    :attr:`lst` in reversed order.</span>
 
 <span class="sd">    :param lst: The input list</span>
-<span class="sd">    :return: A new list consisting of the elements in :attr:`lst` in reversed order</span>
+<span class="sd">    :return: A new list consisting of the elements in :attr:`lst` in reversed</span>
+<span class="sd">        order</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="n">lst</span><span class="p">))</span></div>
 
