--- a/python/katas/_modules/codewars/rgb_to_hex_conversion.html
+++ b/python/katas/_modules/codewars/rgb_to_hex_conversion.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.rgb_to_hex_conversion.rgb">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">rgb</span><span class="p">(</span><span class="n">red</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">green</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">blue</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts an RGB integer value into a 6-character hexadecimal string. For example,</span>
-<span class="sd">    given (255, 0, 10), this function will return &quot;FF000A&quot;.</span>
+<span class="sd">    This function converts an RGB integer value into a 6-character hexadecimal</span>
+<span class="sd">    string. For example, rgb(255, 0, 10) will return &quot;FF000A&quot;.</span>
 
 <span class="sd">    :param red: The input integer representing the value for red</span>
 <span class="sd">    :param green: The input integer representing the value for green</span>
