--- a/python/katas/_modules/codewars/rotate_for_a_max.html
+++ b/python/katas/_modules/codewars/rotate_for_a_max.html
@@ -259,10 +259,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.rotate_for_a_max.max_rot">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">max_rot</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function rotates a digit starting from the far left to the left one digit all the way until</span>
-<span class="sd">    the last digit on the far right is reached. For example, given &quot;1234&quot;, this function will</span>
-<span class="sd">    perform the following rotations: &quot;2341&quot;, &quot;2413&quot;, and &quot;2431&quot;. Finally, the maximum out of all</span>
-<span class="sd">    the numbers (which include the original number--in the example, &quot;1234&quot;) is returned (in the</span>
+<span class="sd">    This function rotates a digit starting from the far left to the left one</span>
+<span class="sd">    digit all the way until the last digit on the far right is reached. For</span>
+<span class="sd">    example, max_rot(&quot;1234&quot;) will perform the following rotations: &quot;2341&quot;,</span>
+<span class="sd">    &quot;2413&quot;, and &quot;2431&quot;. Finally, the maximum out of all the numbers (which</span>
+<span class="sd">    include the original number--in the example, &quot;1234&quot;) is returned (in the</span>
 <span class="sd">    example, &quot;2431&quot; is the maximum).</span>
 
 <span class="sd">    :param number: The input integer</span>
