--- a/python/katas/_modules/coderbyte/intersecting_lines.html
+++ b/python/katas/_modules/coderbyte/intersecting_lines.html
@@ -260,11 +260,12 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.intersecting_lines.calculate_slope">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">calculate_slope</span><span class="p">(</span><span class="n">line</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]])</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function calculates the slope of a line given two points in :attr:`line`.</span>
+<span class="sd">    This helper function calculates the slope of a line given two points in</span>
+<span class="sd">    :attr:`line`.</span>
 
 <span class="sd">    :param line: The line</span>
-<span class="sd">    :return: None if the line has no slope (vertical), or a float representing the slope of</span>
-<span class="sd">        :attr:`line`</span>
+<span class="sd">    :return: None if the line has no slope (vertical), or a float representing</span>
+<span class="sd">        the slope of :attr:`line`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">delta_y</span> <span class="o">=</span> <span class="n">line</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span> <span class="o">-</span> <span class="n">line</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">1</span><span class="p">]</span>
     <span class="n">delta_x</span> <span class="o">=</span> <span class="n">line</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">-</span> <span class="n">line</span><span class="p">[</span><span class="mi">1</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>
@@ -276,13 +277,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.intersecting_lines.calculate_c_value">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">calculate_c_value</span><span class="p">(</span><span class="n">point</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">],</span> <span class="n">slope</span><span class="p">:</span> <span class="nb">float</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">float</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Given a point and the slope of a line, this helper function calculates the value c in the</span>
-<span class="sd">    equation: y = ax + c where a is the slope of the line, and x and y are the coordinates of the</span>
-<span class="sd">    point on the line.</span>
+<span class="sd">    Given a point and the slope of a line, this helper function calculates the</span>
+<span class="sd">    value C in the equation: y = Ax + C where A is the slope of the line, and x</span>
+<span class="sd">    and y are the coordinates of the point on the line.</span>
 
 <span class="sd">    :param point: The point with x and y coordinates</span>
-<span class="sd">    :param slope: The slope a</span>
-<span class="sd">    :return: The value c</span>
+<span class="sd">    :param slope: The slope (A)</span>
+<span class="sd">    :return: The value for C</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">x_value</span> <span class="o">=</span> <span class="n">point</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
     <span class="n">y_value</span> <span class="o">=</span> <span class="n">point</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
@@ -294,22 +295,24 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.intersecting_lines.intersecting_lines">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">intersecting_lines</span><span class="p">(</span><span class="n">strings</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the point at which the two lines represented by the points in</span>
-<span class="sd">    :attr:`string` intersect.</span>
+<span class="sd">    This function returns the point at which the two lines represented by the</span>
+<span class="sd">    points in :attr:`string` intersect.</span>
 
 <span class="sd">    :param strings: The input list of tuples, each of which represents a point</span>
-<span class="sd">    :return: The point at which both lines intersect, or &quot;no intersection&quot; if both lines are</span>
-<span class="sd">        parallel to each other</span>
+<span class="sd">    :return: The point at which both lines intersect, or &quot;no intersection&quot; if</span>
+<span class="sd">        both lines are parallel to each other</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">line1</span> <span class="o">=</span> <span class="p">[</span><span class="n">literal_eval</span><span class="p">(</span><span class="n">strings</span><span class="p">[</span><span class="mi">0</span><span class="p">]),</span> <span class="n">literal_eval</span><span class="p">(</span><span class="n">strings</span><span class="p">[</span><span class="mi">1</span><span class="p">])]</span>
     <span class="n">line2</span> <span class="o">=</span> <span class="p">[</span><span class="n">literal_eval</span><span class="p">(</span><span class="n">strings</span><span class="p">[</span><span class="mi">2</span><span class="p">]),</span> <span class="n">literal_eval</span><span class="p">(</span><span class="n">strings</span><span class="p">[</span><span class="mi">3</span><span class="p">])]</span>
     <span class="n">slope1</span> <span class="o">=</span> <span class="n">calculate_slope</span><span class="p">(</span><span class="n">line1</span><span class="p">)</span>
     <span class="n">slope2</span> <span class="o">=</span> <span class="n">calculate_slope</span><span class="p">(</span><span class="n">line2</span><span class="p">)</span>
     <span class="k">if</span> <span class="n">slope1</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">and</span> <span class="n">slope2</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="n">y_result</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">slope2</span> <span class="o">*</span> <span class="n">line1</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">calculate_c_value</span><span class="p">(</span><span class="n">line2</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">slope2</span><span class="p">))</span>
+        <span class="n">c</span> <span class="o">=</span> <span class="n">calculate_c_value</span><span class="p">(</span><span class="n">line2</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">slope2</span><span class="p">)</span>
+        <span class="n">y_result</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">slope2</span> <span class="o">*</span> <span class="n">line1</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">c</span><span class="p">)</span>
         <span class="k">return</span> <span class="sa">f</span><span class="s2">&quot;(</span><span class="si">{</span><span class="n">line1</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">y_result</span><span class="si">}</span><span class="s2">)&quot;</span>
     <span class="k">if</span> <span class="n">slope2</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">and</span> <span class="n">slope1</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="n">y_result</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">slope1</span> <span class="o">*</span> <span class="n">line2</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">calculate_c_value</span><span class="p">(</span><span class="n">line1</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">slope1</span><span class="p">))</span>
+        <span class="n">c</span> <span class="o">=</span> <span class="n">calculate_c_value</span><span class="p">(</span><span class="n">line1</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">slope1</span><span class="p">)</span>
+        <span class="n">y_result</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">slope1</span> <span class="o">*</span> <span class="n">line2</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">c</span><span class="p">)</span>
         <span class="k">return</span> <span class="sa">f</span><span class="s2">&quot;(</span><span class="si">{</span><span class="n">line2</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">y_result</span><span class="si">}</span><span class="s2">)&quot;</span>
     <span class="k">if</span> <span class="n">slope1</span> <span class="o">==</span> <span class="n">slope2</span><span class="p">:</span>
         <span class="k">return</span> <span class="s2">&quot;no intersection&quot;</span>
