--- a/python/katas/_modules/coderbyte/mean_mode.html
+++ b/python/katas/_modules/coderbyte/mean_mode.html
@@ -257,15 +257,16 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.mean_mode.mean_mode">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">mean_mode</span><span class="p">(</span><span class="n">int_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns 1 if the mode of the list of integers is equal to the mean; otherwise, 0</span>
-<span class="sd">    is returned. It is assumed that the list will only contain positive integers and not contain</span>
-<span class="sd">    more than one mode.</span>
+<span class="sd">    This function returns 1 if the mode of the list of integers is equal to the</span>
+<span class="sd">    mean; otherwise, 0 is returned. It is assumed that the list will only</span>
+<span class="sd">    contain positive integers and not contain more than one mode.</span>
 
 <span class="sd">    :param int_arr: The input list of integers</span>
 <span class="sd">    :return: 1 if the mode is equal to the mean, or 0 otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">numbers</span> <span class="o">=</span> <span class="p">{</span><span class="n">number</span><span class="p">:</span> <span class="n">int_arr</span><span class="o">.</span><span class="n">count</span><span class="p">(</span><span class="n">number</span><span class="p">)</span> <span class="k">for</span> <span class="n">number</span> <span class="ow">in</span> <span class="n">int_arr</span><span class="p">}</span>
-    <span class="k">return</span> <span class="mi">1</span> <span class="k">if</span> <span class="nb">max</span><span class="p">(</span><span class="n">numbers</span><span class="p">,</span> <span class="n">key</span><span class="o">=</span><span class="n">numbers</span><span class="o">.</span><span class="n">get</span><span class="p">)</span> <span class="o">==</span> <span class="nb">sum</span><span class="p">(</span><span class="n">int_arr</span><span class="p">)</span> <span class="o">/</span> <span class="nb">len</span><span class="p">(</span><span class="n">int_arr</span><span class="p">)</span> <span class="k">else</span> <span class="mi">0</span></div>
+    <span class="n">maximum</span> <span class="o">=</span> <span class="nb">max</span><span class="p">(</span><span class="n">numbers</span><span class="p">,</span> <span class="n">key</span><span class="o">=</span><span class="n">numbers</span><span class="o">.</span><span class="n">get</span><span class="p">)</span>
+    <span class="k">return</span> <span class="mi">1</span> <span class="k">if</span> <span class="n">maximum</span> <span class="o">==</span> <span class="nb">sum</span><span class="p">(</span><span class="n">int_arr</span><span class="p">)</span> <span class="o">/</span> <span class="nb">len</span><span class="p">(</span><span class="n">int_arr</span><span class="p">)</span> <span class="k">else</span> <span class="mi">0</span></div>
 
 </pre></div>
         </article>
