--- a/python/katas/_modules/coderbyte/off_binary.html
+++ b/python/katas/_modules/coderbyte/off_binary.html
@@ -255,21 +255,22 @@
 
 <div class="viewcode-block" id="off_binary">
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.off_binary.off_binary">[docs]</a>
-<span class="k">def</span><span class="w"> </span><span class="nf">off_binary</span><span class="p">(</span><span class="n">str_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">off_binary</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function takes a list of two strings: the first string represents a positive decimal number</span>
-<span class="sd">    and the second string represents a binary number. This function determines the number of digits</span>
-<span class="sd">    in the binary number that need to be changed to correctly represent the first decimal number.</span>
+<span class="sd">    This function takes a list of two strings: the first string represents a</span>
+<span class="sd">    positive decimal number and the second string represents a binary number.</span>
+<span class="sd">    This function determines the number of digits in the binary number that</span>
+<span class="sd">    need to be changed to correctly represent the first decimal number.</span>
 
-<span class="sd">    For example, given &quot;56&quot; and &quot;011000&quot;, this function will return 1 because only one digit needs</span>
-<span class="sd">    to be changed in the binary number (the first 0 needs to be changed to 1) to correctly represent</span>
-<span class="sd">    56 in binary.</span>
+<span class="sd">    For example, given &quot;56&quot; and &quot;011000&quot;, this function will return 1 because</span>
+<span class="sd">    only one digit needs to be changed in the binary number (the first 0 needs</span>
+<span class="sd">    to be changed to 1) to correctly represent 56 in binary.</span>
 
-<span class="sd">    :param str_arr: The input list of strings</span>
+<span class="sd">    :param arr: The input list of strings</span>
 <span class="sd">    :return: The number of digits that need to be changed in the binary number</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">binary</span> <span class="o">=</span> <span class="n">str_arr</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
-    <span class="n">number_as_binary</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;{0:&quot;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">binary</span><span class="p">))</span> <span class="o">+</span> <span class="s2">&quot;b}&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">str_arr</span><span class="p">[</span><span class="mi">0</span><span class="p">]))</span>
+    <span class="n">binary</span> <span class="o">=</span> <span class="n">arr</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
+    <span class="n">number_as_binary</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;{0:&quot;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">binary</span><span class="p">))</span> <span class="o">+</span> <span class="s2">&quot;b}&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">arr</span><span class="p">[</span><span class="mi">0</span><span class="p">]))</span>
     <span class="n">count</span> <span class="o">=</span> <span class="mi">0</span>
     <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">number_as_binary</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">number_as_binary</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="o">!=</span> <span class="n">binary</span><span class="p">[</span><span class="n">idx</span><span class="p">]:</span>
