--- a/python/katas/_modules/coderbyte/serial_number.html
+++ b/python/katas/_modules/coderbyte/serial_number.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.serial_number.serial_number">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">serial_number</span><span class="p">(</span><span class="n">serial</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns &quot;true&quot; if the given :attr:`serial` is a valid serial number.</span>
+<span class="sd">    This function returns &quot;true&quot; if the given :attr:`serial` is a valid serial</span>
+<span class="sd">    number.</span>
 
 <span class="sd">    :param serial: The input string that represents a serial number</span>
 <span class="sd">    :return: &quot;true&quot; if the string is a valid serial number, &quot;false&quot; otherwise</span>
@@ -291,12 +292,14 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.serial_number.check_string">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">check_string</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function returns True if all the digits in :attr:`string` are less than</span>
-<span class="sd">    :attr:`number`.</span>
+<span class="sd">    This helper function returns True if all the digits in :attr:`string` are</span>
+<span class="sd">    less than :attr:`number`.</span>
 
 <span class="sd">    :param string: A string of numbers</span>
-<span class="sd">    :param number: The number that each digit in :attr:`string` must be less than</span>
-<span class="sd">    :return: True if all the digits in :attr:`string` are less than :attr:`number`, False otherwise</span>
+<span class="sd">    :param number: The number that each digit in :attr:`string` must be less</span>
+<span class="sd">        than</span>
+<span class="sd">    :return: True if all the digits in :attr:`string` are less than</span>
+<span class="sd">        :attr:`number`, False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">for</span> <span class="n">digit</span> <span class="ow">in</span> <span class="n">string</span><span class="p">:</span>
         <span class="k">if</span> <span class="n">number</span> <span class="o">&lt;=</span> <span class="nb">int</span><span class="p">(</span><span class="n">digit</span><span class="p">):</span>
