--- a/python/katas/_modules/coderbyte/simple_mode.html
+++ b/python/katas/_modules/coderbyte/simple_mode.html
@@ -259,13 +259,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.simple_mode.simple_mode">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">simple_mode</span><span class="p">(</span><span class="n">int_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number that appears the most frequently (i.e. mode) in</span>
-<span class="sd">    :attr:`int_arr`. If there is more than one node, the number that appears in the list first will</span>
-<span class="sd">    be returned.</span>
+<span class="sd">    This function returns the number that appears the most frequently (i.e.,</span>
+<span class="sd">    mode) in :attr:`int_arr`. If there is more than one node, the number that</span>
+<span class="sd">    appears in the list first will be returned.</span>
 
 <span class="sd">    :param int_arr: The input list of integers</span>
-<span class="sd">    :return: The number that appears the most frequently, or -1 if all the numbers appear once (</span>
-<span class="sd">        i.e. there is no mode)</span>
+<span class="sd">    :return: The number that appears the most frequently, or -1 if all the</span>
+<span class="sd">        numbers appear once (i.e., there is no mode)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">int_arr</span><span class="p">)</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;list must not be empty&quot;</span><span class="p">)</span>
