--- a/python/katas/_modules/coderbyte/superincreasing.html
+++ b/python/katas/_modules/coderbyte/superincreasing.html
@@ -257,12 +257,13 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.superincreasing.superincreasing">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">superincreasing</span><span class="p">(</span><span class="n">int_arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns &quot;true&quot; if :attr:`int_arr` forms a superincreasing sequence where each</span>
-<span class="sd">    element in the array is greater than the sum of all previous elements.</span>
+<span class="sd">    This function returns &quot;true&quot; if :attr:`int_arr` forms a superincreasing</span>
+<span class="sd">    sequence where each element in the array is greater than the sum of all</span>
+<span class="sd">    previous elements.</span>
 
 <span class="sd">    :param int_arr: The input list of integers</span>
-<span class="sd">    :return: &quot;true&quot; if the list forms a superincreasing sequence, &quot;false&quot; if an element is less than</span>
-<span class="sd">        or equal to the sum of all previous elements</span>
+<span class="sd">    :return: &quot;true&quot; if the list forms a superincreasing sequence, &quot;false&quot; if an</span>
+<span class="sd">        element is less than or equal to the sum of all previous elements</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">int_arr</span><span class="p">)):</span>
         <span class="k">if</span> <span class="n">int_arr</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span> <span class="o">&lt;=</span> <span class="nb">sum</span><span class="p">(</span><span class="n">int_arr</span><span class="p">[:</span><span class="n">idx</span><span class="p">]):</span>
