--- a/python/katas/_modules/coderbyte/threefive_multiples.html
+++ b/python/katas/_modules/coderbyte/threefive_multiples.html
@@ -257,10 +257,12 @@
 <a class="viewcode-back" href="../../coderbyte.html#coderbyte.threefive_multiples.threefive_multiples">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">threefive_multiples</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the sum of all the multiples of 3 and 5 that are below :attr:`number`.</span>
+<span class="sd">    This function returns the sum of all the multiples of 3 and 5 that are</span>
+<span class="sd">    below :attr:`number`.</span>
 
 <span class="sd">    :param number: The input integer</span>
-<span class="sd">    :return: The sum of all the multiples of 3 and 5 that are below :attr:`number`</span>
+<span class="sd">    :return: The sum of all the multiples of 3 and 5 that are below</span>
+<span class="sd">        :attr:`number`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">threes</span> <span class="o">=</span> <span class="p">[</span><span class="mi">3</span> <span class="o">*</span> <span class="n">idx</span> <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">number</span><span class="p">)</span> <span class="k">if</span> <span class="mi">3</span> <span class="o">*</span> <span class="n">idx</span> <span class="o">&lt;</span> <span class="n">number</span><span class="p">]</span>
     <span class="n">fives</span> <span class="o">=</span> <span class="p">[</span><span class="mi">5</span> <span class="o">*</span> <span class="n">idx</span> <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">number</span><span class="p">)</span> <span class="k">if</span> <span class="mi">5</span> <span class="o">*</span> <span class="n">idx</span> <span class="o">&lt;</span> <span class="n">number</span><span class="p">]</span>
