--- a/python/katas/_modules/codewars/prize_draw.html
+++ b/python/katas/_modules/codewars/prize_draw.html
@@ -259,20 +259,22 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.prize_draw.rank">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">rank</span><span class="p">(</span><span class="n">participants</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">weights</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">winner_rank</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the name of the person with the winning number at position</span>
-<span class="sd">    :attr:`winner_rank` in the list of participants. The winning number is calculated as follows:</span>
-<span class="sd">    sum the letters of a participant&#39;s name (letters A-Z represent numbers 1-26), add the length</span>
-<span class="sd">    of the participant&#39;s name to the sum, and multiply the result by a weight in :attr:`weights` to</span>
-<span class="sd">    get the winning number. The participants are sorted in descending order by winning numbers, but</span>
-<span class="sd">    if two or more winning numbers are the same, those participants are sorted in alphabetical</span>
-<span class="sd">    order. indexes in the list of participants with winning numbers start at 1.</span>
+<span class="sd">    This function returns the name of the person with the winning number at</span>
+<span class="sd">    position :attr:`winner_rank` in the list of participants. The winning</span>
+<span class="sd">    number is calculated as follows: sum the letters of a participant&#39;s name</span>
+<span class="sd">    (letters A-Z represent numbers 1-26), add the length of the participant&#39;s</span>
+<span class="sd">    name to the sum, and multiply the result by a weight in :attr:`weights` to</span>
+<span class="sd">    get the winning number. The participants are sorted in descending order by</span>
+<span class="sd">    winning numbers, but if two or more winning numbers are the same, those</span>
+<span class="sd">    participants are sorted in alphabetical order. indexes in the list of</span>
+<span class="sd">    participants with winning numbers start at 1.</span>
 
 <span class="sd">    :param participants: The input list of strings</span>
 <span class="sd">    :param weights: The input list of integers</span>
-<span class="sd">    :param winner_rank: The input integer representing the position in the list of winning</span>
-<span class="sd">        participants</span>
-<span class="sd">    :return: The name of the participant at position :attr:`winner_rank` after calculating all the</span>
-<span class="sd">        winning numbers and sorting the results</span>
+<span class="sd">    :param winner_rank: The input integer representing the position in the list</span>
+<span class="sd">        of winning participants</span>
+<span class="sd">    :return: The name of the participant at position :attr:`winner_rank` after</span>
+<span class="sd">        calculating all the winning numbers and sorting the results</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">participants</span><span class="p">:</span>
         <span class="k">return</span> <span class="s2">&quot;No participants&quot;</span>
