--- a/python/katas/_modules/codewars/removing_elements.html
+++ b/python/katas/_modules/codewars/removing_elements.html
@@ -257,11 +257,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.removing_elements.remove_every_other">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">remove_every_other</span><span class="p">(</span><span class="n">my_list</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function removes all elements in the given list that are at even indexes. For example,</span>
-<span class="sd">    given [&quot;Hi&quot;, &quot;Hello&quot;, 2, &quot;World!&quot;, 0.5, True], the list [&quot;Hello&quot;, &quot;World!&quot;, True] is returned.</span>
+<span class="sd">    This function removes all elements in the given list that are at even</span>
+<span class="sd">    indexes. For example, given [&quot;Hi&quot;, &quot;Hello&quot;, 2, &quot;World!&quot;, 0.5, True], the</span>
+<span class="sd">    list [&quot;Hello&quot;, &quot;World!&quot;, True] is returned.</span>
 
 <span class="sd">    :param my_list: The input list</span>
-<span class="sd">    :return: An empty list or a list that contains fewer elements than :attr:`my_list`</span>
+<span class="sd">    :return: An empty list or a list that contains fewer elements than</span>
+<span class="sd">        :attr:`my_list`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="p">[</span><span class="n">element</span> <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">element</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">my_list</span><span class="p">)</span> <span class="k">if</span> <span class="n">idx</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span><span class="p">]</span></div>
 
