--- a/python/katas/_modules/codewars/return_a_sorted_list_of_objects.html
+++ b/python/katas/_modules/codewars/return_a_sorted_list_of_objects.html
@@ -257,13 +257,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.return_a_sorted_list_of_objects.sort_list">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">sort_list</span><span class="p">(</span><span class="n">sort_by</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">lst</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">]])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">int</span><span class="p">]]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function sorts a list of dictionary objects in reverse order by integer value and then</span>
-<span class="sd">    returns the sorted list.</span>
+<span class="sd">    This function sorts a list of dictionary objects in reverse order by</span>
+<span class="sd">    integer value and then returns the sorted list.</span>
 
-<span class="sd">    :param sort_by: A key that exists in all dictionaries in :attr:`lst`, the value will be used to</span>
-<span class="sd">        sort the list in reverse order</span>
-<span class="sd">    :param lst: The input list of dictionaries, each dictionary has keys that are strings and</span>
-<span class="sd">        values that are integers</span>
+<span class="sd">    :param sort_by: A key that exists in all dictionaries in :attr:`lst`, the</span>
+<span class="sd">        value will be used to sort the list in reverse order</span>
+<span class="sd">    :param lst: The input list of dictionaries, each dictionary has keys that</span>
+<span class="sd">        are strings and values that are integers</span>
 <span class="sd">    :return: A sorted list of dictionaries</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">lst</span><span class="p">,</span> <span class="n">key</span><span class="o">=</span><span class="k">lambda</span> <span class="n">dictionary</span><span class="p">:</span> <span class="o">-</span><span class="n">dictionary</span><span class="p">[</span><span class="n">sort_by</span><span class="p">])</span></div>
