--- a/python/katas/_modules/codewars/roman_numerals_helper.html
+++ b/python/katas/_modules/codewars/roman_numerals_helper.html
@@ -288,7 +288,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.roman_numerals_helper.RomanNumerals">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">RomanNumerals</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This class contains static methods that will convert numbers to Roman numerals and vice versa.</span>
+<span class="sd">    This class contains static methods that will convert numbers to Roman</span>
+<span class="sd">    numerals and vice versa.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="RomanNumerals.to_roman">
@@ -331,7 +332,8 @@
                     <span class="k">else</span><span class="p">:</span>
                         <span class="n">strings</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">num_to_roman</span><span class="p">[</span><span class="mi">10</span><span class="p">]</span> <span class="o">*</span> <span class="n">num</span><span class="p">)</span>
                 <span class="k">elif</span> <span class="n">number</span> <span class="o">&gt;</span> <span class="mi">5</span><span class="p">:</span>
-                    <span class="n">strings</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">num_to_roman</span><span class="p">[</span><span class="mi">5</span><span class="p">]</span> <span class="o">+</span> <span class="p">(</span><span class="n">num_to_roman</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="p">(</span><span class="n">number</span> <span class="o">-</span> <span class="mi">5</span><span class="p">)))</span>
+                    <span class="n">num</span> <span class="o">=</span> <span class="p">(</span><span class="n">num_to_roman</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="p">(</span><span class="n">number</span> <span class="o">-</span> <span class="mi">5</span><span class="p">))</span>
+                    <span class="n">strings</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">num_to_roman</span><span class="p">[</span><span class="mi">5</span><span class="p">]</span> <span class="o">+</span> <span class="n">num</span><span class="p">)</span>
                 <span class="k">else</span><span class="p">:</span>
                     <span class="n">strings</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">num_to_roman</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="n">number</span><span class="p">)</span>
         <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">strings</span><span class="p">)</span></div>
