--- a/python/katas/_modules/codewars/rotate_the_letters_of_each_element.html
+++ b/python/katas/_modules/codewars/rotate_the_letters_of_each_element.html
@@ -259,13 +259,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.rotate_the_letters_of_each_element.group_cities">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">group_cities</span><span class="p">(</span><span class="n">seq</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function groups together strings that can be obtained by rotating other strings, ignoring</span>
-<span class="sd">    case. If a string appears more than once in the input list, only one of them will be taken into</span>
-<span class="sd">    account when producing the result.</span>
+<span class="sd">    This function groups together strings that can be obtained by rotating</span>
+<span class="sd">    other strings, ignoring case. If a string appears more than once in the</span>
+<span class="sd">    input list, only one of them will be taken into account when producing the</span>
+<span class="sd">    result.</span>
 
 <span class="sd">    :param seq: The input list of strings</span>
-<span class="sd">    :return: A list containing sublists of strings, each sublist containing strings that when</span>
-<span class="sd">        rotated, produce other strings in the sublist</span>
+<span class="sd">    :return: A list containing sublists of strings, each sublist containing</span>
+<span class="sd">        strings that when rotated, produce other strings in the sublist</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">seq</span><span class="p">:</span>
         <span class="k">return</span> <span class="p">[]</span>
